--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-animations": "^1.0.0",
     "react-bootstrap": "^1.0.0-beta.15",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.9.0",
     "react-live-clock": "^3.1.0",
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.1"
